syntax = "proto3";

package hello.v1;
option go_package = "github.com/slb-uk/grpc-hello/api/hellopb;hellopb";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloResponse);
  rpc GreetManyTimes(HelloRequest) returns (stream HelloResponse);
}